fix : user budget table, repository and services
